--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -6,5 +6,13 @@
 
 body
 {
-    knob
+
+}
+
+#background-video {
+    user-select:none;
+    width:100vw;
+    z-index:100;
+    overflow:hidden;
+    height: 100vh;
 }
