--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -33,7 +33,6 @@
 }
 
 #bookOpen {
-    visibility: hidden;
     font-family: 'Dancing Script', cursive;
     display:grid;
     grid-template-columns: 1fr 1fr;
@@ -42,20 +41,23 @@
     height:576px;
     width:828px;
     opacity:1;
+    word-wrap:break-word;
 }
 
 #left {
+    padding:40px 20px 40px 50px;
+    word-wrap:break-word;
     width:100%;
-    height:100%;
-    padding:40px 20px 40px 60px;
-
+    height:90%;
 }
 
 
+
 #right {
-    widows: 100%;
-    height:100%;
     padding:40px 38px 40px 20px;
+    word-wrap:break-word;
+    width:100%;
+    height:90%;
 }
 
 .left-number {
