--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -1,74 +1,109 @@
 ﻿* {
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 #wrapper {
-    width:100vw;
-    height:100vh;
-    display:flex;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
     flex-direction: row;
-    z-index:1;
-    justify-content:center;
-    align-items:center;
-    align-content:center;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 #background-video {
-    position:fixed;
-    width:100vw;
-    z-index:-1000;
-    overflow:hidden;
+    position: fixed;
+    width: 100vw;
+    z-index: -1000;
+    overflow: hidden;
     height: 100vh;
 }
 
 #bookClosed {
-    height: 50%;
-    width: 50%;
+    height: 60%;
+    width: 30%;
     display: flex;
     justify-content: center;
-    align-content:center;
-    
+    align-content: center;
 }
 
 #bookOpen {
-    font-family: 'Dancing Script', cursive;
-    display:grid;
+    font-family: 'Times New Roman', cursive;
+    display: grid;
     grid-template-columns: 1fr 1fr;
     background: url("../bilder/openBook.png");
-    background-size:cover;
-    height:576px;
-    width:828px;
-    opacity:1;
-    word-wrap:break-word;
+    background-size: cover;
+    height: 576px;
+    width: 828px;
+    opacity: 1;
+    word-wrap: break-word;
+    user-select: none;
 }
 
 #left {
-    padding:40px 20px 40px 50px;
-    word-wrap:break-word;
-    width:100%;
-    height:90%;
+    padding: 40px 20px 40px 50px;
+    word-wrap: break-word;
+    width: 100%;
+    height: 90%;
+    font-size: 12px;
 }
 
-
-
 #right {
-    padding:40px 38px 40px 20px;
-    word-wrap:break-word;
-    width:100%;
-    height:90%;
+    padding: 60px 45px 40px 20px;
+    word-wrap: break-word;
+    width: 100%;
+    height: 90%;
+}
+
+#oluf1 {
+    height: 100%;
+    width: 100%;
 }
 
 .left-number {
-    position:absolute;
-    bottom:0;
-    left:0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .right-number {
-    position:absolute;
-    bottom:0;
-    right:0;
-    align-self:flex-end;
-}   
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    align-self: flex-end;
+}
+
+#bokKnapp {
+    height: 70px;
+    width: 70px;
+}
+
+#randomBilde {
+    height: 70px;
+    width: 80px;
+}
+
+.word {
+    background: rgb(150, 0, 0);
+    margin: 3px;
+    padding: 10px;
+    opacity: 1;
+    border-radius: 10px;
+    display: inline-block;
+    user-select: none;
+    transition: 0.5s;
+    color: white;
+}
+
+.word:hover {
+    background: rgba(150, 0, 0, 0.212);
+    color: black;
+}
+
+.empty {
+    background: rgb(150, 0, 0);
+}
