--- a/css/StyleSheet1.css
+++ b/css/StyleSheet1.css
@@ -89,8 +89,8 @@
 
 .word {
     background: rgb(150, 0, 0);
-    margin: 3px;
-    padding: 10px;
+    margin: 2px;
+    padding: 0 3px 0 3px;
     opacity: 1;
     border-radius: 10px;
     display: inline-block;
